syntax = "proto3";

package weaviategrpc;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/weaviate/weaviate/grpc";


service Weaviate {
  rpc Search(SearchRequest) returns (SearchReply) {};
  rpc BatchObjects(BatchObjectsRequest) returns (BatchObjectsReply) {};
}

message BatchObjectsRequest {
  repeated BatchObject objects = 1;
}

message BatchObject {
  message Properties {
    google.protobuf.Struct non_ref_properties = 1;
    // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
    repeated RefPropertiesSingleTarget ref_props_single = 2;
    // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
    repeated RefPropertiesMultiTarget ref_props_multi = 3;
  }

  message RefPropertiesSingleTarget {
    repeated string uuids = 1;
    string prop_name = 2;
  }

  message RefPropertiesMultiTarget {
    repeated string uuids = 1;
    string prop_name = 2;
    string target_collection = 3;
  }

  string uuid = 1;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 2;
  Properties properties = 3;
  string class_name = 4;
  string tenant=5;
}

message BatchObjectsReply {
  message BatchResults {
    int32 index = 1;
    string error = 2;
  }
  
  repeated BatchResults results = 1;
  float took = 2;
}

message SearchRequest {
  string class_name = 1;
  uint32 limit = 2;
  AdditionalProperties additional_properties = 3;
  NearVectorParams near_vector = 4;
  NearObjectParams near_object = 5;
  Properties properties = 6;
  HybridSearchParams hybrid_search =7;
  BM25SearchParams bm25_search =8;
  uint32 offset = 9;
  uint32 autocut = 10;
  string after = 11;
  string tenant = 12;
  optional Filters filters = 13;
  optional NearTextSearchParams near_text = 14;
  optional NearImageSearchParams near_image = 15;
  optional NearAudioSearchParams near_audio = 16;
  optional NearVideoSearchParams near_video = 17;
}

message TextArray{
  repeated string vals = 1;
}
message IntArray{
  repeated int32 vals = 1;
}
message NumberArray{
  repeated double vals = 1;
}
message BooleanArray{
  repeated bool vals = 1;
}
message DateArray{
  repeated google.protobuf.Timestamp vals = 1;
}

message Filters {
  enum Operator {
    OPERATOR_UNSPECIFIED = 0;
    OPERATOR_EQUAL = 1;
    OPERATOR_NOT_EQUAL = 2;
    OPERATOR_GREATER_THAN = 3;
    OPERATOR_GREATER_THAN_EQUAL = 4;
    OPERATOR_LESS_THAN = 5;
    OPERATOR_LESS_THAN_EQUAL = 6;
    OPERATOR_AND = 7;
    OPERATOR_OR = 8;
    OPERATOR_WITHIN_GEO_RANGE = 9;
    OPERATOR_LIKE = 10;
    OPERATOR_IS_NULL = 11;
    OPERATOR_CONTAINS_ANY = 12;
    OPERATOR_CONTAINS_ALL = 13;
  }


  Operator operator = 1;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated string on = 2;
  repeated Filters filters = 3;
  oneof test_value{
    string value_text = 4;
    int64 value_int = 5;
    bool value_boolean = 6;
    float value_number = 7;
    google.protobuf.Timestamp value_date = 8;
    TextArray value_text_array = 9;
    IntArray value_int_array = 10;
    BooleanArray value_boolean_array = 11;
    NumberArray value_number_array = 12;
    DateArray value_date_array = 13;
  };
}


message AdditionalProperties {
  bool uuid = 1;
  bool vector = 2;
  // protolint:disable:next FIELD_NAMES_LOWER_SNAKE_CASE
  bool creationTimeUnix = 3;
  // protolint:disable:next FIELD_NAMES_LOWER_SNAKE_CASE
  bool lastUpdateTimeUnix = 4;
  bool distance = 5;
  bool certainty = 6;
  bool score = 7;
  // protolint:disable:next FIELD_NAMES_LOWER_SNAKE_CASE
  bool explainScore = 8;
}


message Properties {
  repeated string non_ref_properties = 1;
  repeated RefProperties ref_properties = 2;
}

message HybridSearchParams {
  string query = 1;
  repeated string properties = 2;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 3;
  float alpha = 4;
  enum FusionType {
    FUSION_TYPE_UNSPECIFIED = 0;
    FUSION_TYPE_RANKED = 1;
    FUSION_TYPE_RELATIVE_SCORE = 2;
  }
  FusionType fusion_type = 5;
}

message NearTextSearchParams{
  message Move{
    float force = 1;
    repeated string concepts = 2;
    repeated string uuids = 3;
  }
  
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated string query = 1;
  optional double certainty = 2;
  optional double distance = 3;
  optional Move move_to = 4;
  optional Move move_away = 5;
};

message NearImageSearchParams{
  string image = 1;
  optional double certainty = 2;
  optional double distance = 3;
};

message NearAudioSearchParams{
  string audio = 1;
  optional double certainty = 2;
  optional double distance = 3;
};

message NearVideoSearchParams{
  string video = 1;
  optional double certainty = 2;
  optional double distance = 3;
};

message BM25SearchParams {
  string query = 1;
  repeated string properties = 2;
}


message RefProperties {
  string reference_property = 2;
  Properties linked_properties = 3;
  AdditionalProperties metadata = 4;
  string which_collection = 5;
}

message NearVectorParams {
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message NearObjectParams {
  string id = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message SearchReply {
  repeated SearchResult results = 1;
  float took = 2;
}

message SearchResult {
  ResultProperties properties = 1;
  ResultAdditionalProps additional_properties = 2;
}

message ResultAdditionalProps {
  string id = 1;
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 2;
  int64 creation_time_unix = 3;
  bool creation_time_unix_present = 4;
  int64 last_update_time_unix = 5;
  bool last_update_time_unix_present = 6;
  float distance = 7;
  bool distance_present = 8;
  float certainty = 9;
  bool certainty_present = 10;
  float score = 11;
  bool score_present = 12;
  string explain_score = 13;
  bool explain_score_present = 14;
}

message NumberArrayProperties{
  string key =1;
  repeated double vals = 2;
}

message IntArrayProperties{
  string key =1;
  repeated int32 vals = 2;
}

message TextArrayProperties{
  string key =1;
  repeated string vals = 2;
}

message BooleanArrayProperties{
  string key =1;
  repeated bool vals = 2;
}

message DateArrayProperties{
  string key =1;
  repeated google.protobuf.Timestamp vals = 2;
}

message UuidArrayProperties{
  string key =1;
  repeated string vals = 2;
}

message ResultProperties {
  google.protobuf.Struct non_ref_properties = 1;
  repeated ReturnRefProperties ref_props = 2;
  string class_name = 3;
  ResultAdditionalProps metadata = 4;
  repeated NumberArrayProperties number_array_properties = 5;
  repeated IntArrayProperties int_array_properties = 6;
  repeated TextArrayProperties text_array_properties = 7;
  repeated BooleanArrayProperties boolean_array_properties = 8;
  repeated UuidArrayProperties uuid_array_properties = 9;
}

message ReturnRefProperties {
  repeated ResultProperties properties = 1;
  string prop_name = 2;
}

